--- a/intex.html
+++ b/intex.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> Code - desenvolvimento de site</title>
+	<title>Site pessoal</title>
 	<link rel="stylesheet" type="text/css" href="css/folhadeestilo.css">
 </head>
 
